--- a/index.htm
+++ b/index.htm
@@ -637,7 +637,7 @@
     <meta property="og:description" content="MISTERHOKI menjadi salah satu situs judi slot gacor yang paling populer di kalangan pemain judi online. Dengan layanan yang dapat diandalkan dan sistem keamanan yang terjamin, MISTERHOKI menyajikan pengalaman bermain yang seru dan menyenangkan. Temukan keberuntungan Anda di MISTERHOKI dan raih kemenangan besar!" data-rh="true">
     <meta property="og:type" content="website" data-rh="true">
     <meta property="og:url" content="#" data-rh="true">
-    <meta property="og:image" content="https://s9.gifyu.com/images/SFAAS.png" data-rh="true">
+    <meta property="og:image" content="https://s9.gifyu.com/images/SVVDX.md.png" data-rh="true">
     <script type="application/ld+json" data-rh="true">
       {
         "@context": "http://schema.org",
@@ -646,7 +646,7 @@
         "description": "MISTERHOKI menjadi salah satu situs judi slot gacor yang paling populer di kalangan pemain judi online. Dengan layanan yang dapat diandalkan dan sistem keamanan yang terjamin, MISTERHOKI menyajikan pengalaman bermain yang seru dan menyenangkan. Temukan keberuntungan Anda di MISTERHOKI dan raih kemenangan besar!",
         "url": "#",
         "productID": "7735648215",
-        "image": "https://s9.gifyu.com/images/SFAAS.png",
+        "image": "https://s9.gifyu.com/images/SVVDX.md.png",
         "brand": "",
         "offers": {
           "@type": "Offer",
